--- a/style2.css
+++ b/style2.css
@@ -113,7 +113,7 @@ main {
 
 .registration {
   background-color: var(--bs-hero);
-  padding-top: 50px; 
+  padding-top: 50px;
   padding-bottom: 50px;
   border-radius: 24px;
   align-content: center;
@@ -182,110 +182,184 @@ main {
   text-align: center;
 }
 
-
-
-
 /* responsive */
-@media (max-width: 320px) {
-  /* .hero {
-    min-width: 450px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    height: auto;
-    flex-direction: column-reverse;
-    align-items: center;
-    border-radius: 24px;
+@media screen and (min-width:992px) and (max-width:1200px){
+  .left-svg-3 {
+   
+    top: 69.3%;
+  }
+  .left-svg-1 {
+    left:1%;
+    top: 24.2%;
+  }
+  .left-svg-2 {
+      left: 5%;
+      top: 24.2%;
+    }
+    .right-svg-3 {
+      right: 2.5%;
+      top: 61.9%;
+
+    }
+    .right-svg-2 {
+      right: 1%;
+      top: 17%;
+  }
+  .right-svg-1 {
+      right: 2.5%;
+  }
+  .left-lg-svg-1 {
+      left: -3%;
+  }
+  .left-lg-svg-2 {
+      left: -1%;
+  }
+  .left-lg-svg-3 {
+      left: -0.9%;
+  }
+  .hero-content-svg-5 {
+    top: 18px;
+    right: 4%;
+    /* height: 567px; */
+}
+.hero-content-svg-3 {
+    right: 327px;
+}
+}
+@media screen and (min-width:768px) and (max-width:1024px){
+  .hero-content-md-svg-5 {
+      position: absolute;
+      z-index: 1;
+      top: 1%;
+      left: 9%;
+  }
+  /* .hero-img {
+    max-height:450px ;
   } */
+}
 
-  .heading2 {
-    font-size: 42px;
-    min-width: 320px;
+@media screen and (max-width:425px){
+  .hero-content-md-svg-1 {
+      right: 4%;
+      top: -72px;
   }
-  /* .hero-content {
-    padding: 20px;
-  } */
-  .img-header {
-    height: 223px;
-  }
-  .cloud {
-    display: flex;
-    min-width: 320px;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 48px;
-    margin-bottom: 60px;
-  }
-
-  .cloud ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-  }
-
-  .cloud ul li {
-    margin-bottom: 10px;
-  }
-  .speakers-responsive {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 48px;
-    min-width: 320px;
-  }
-  .speakers-responsive .row {
-    flex-direction: column-reverse;
-  }
-
-  .con-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
+  .hero{
+    min-width:379px;
   }
   .speakers {
-    display: flex;
-    min-width: 300px;
-    padding: 36px 0px 63px 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-  }
+      width: 364px;
+      height: 554px;
+    }
+    .box {
+      width: 364px;
+    }
 
-  .one {
-    max-width: 500px;
-  }
+    /* .registration {
+      min-width: 442px;
+    } */
+    .row-hero {
+      flex-direction: column-reverse;
+      align-self:center;
+    }
+    .speakers-one {
+      width:354px;
+      height:358px;
+    }
 
-  .box {
-    display: flex;
-    padding: 8.58px;
-    justify-content: center;
-    align-items: center;
-    gap: 8.58px;
-    min-width: 360px;
-  }
+    .speakers-two{
+      width: 297px;
+    }
 
-  /* .registration {
-    min-width: auto;
-    height: 594px;
-    padding-top: 50px;
-    margin-left: 107px;
-  } */
+    .heading2 {
+        min-width: 327px;
+        font-size: 38px;
+    }
+    
+    .hero-content-sm-svg-5{
+      position: absolute;
+      top:2.5%;
+      left:10%;
+      z-index:1;
+    }
+    .left-sm-svg-1{
+      position:absolute;
+      top:-14%;
+      left:1%;
+
+    }
+    .right-sm-svg-1{
+      position:absolute;
+      top:47.5%;
+      right:1%;
+    }
+    .left-sm-svg-3{
+      position:absolute;
+      top:89.5%;
+      left:-9%;
+      z-index: -1
+    }
+    .left-sm-svg-4 {
+      position:absolute;
+      top: 203%;
+      left: -7%;
+      z-index:-1;
+    }
+    .p-hero {
+      text-align: justify;
+    }
+    .footer {
+      min-width: 378px;
+
+    }
+    .row-footer {
+      min-width: 330px;
+    }
+
+}
+
+
+@media screen and (max-width:320px){
+  .hero-content-sm-svg-5 {
+      top: 36px;
+      left: 1px;
+      height: 185px;
+  }
+  .header {
+    width:200px;
+  }
+  .hero-content h1 {
+    min-width: 228px
+  }
+  .p-hero {
+    width: 231px
+  } 
+  .hero-content-md-svg-1 {
+      right: 4%;
+      top: -72px;
+  }
+  .hero{
+    min-width:320px;
+  }
+  .heading2 {
+    min-width: 259px;
+    font-size: 28px;
+  }
   .abdu {
     margin-left: 50px;
   }
   .abdu .width {
     margin-left: 50px;
   }
+  .registration{
+    min-width: 320px;
+  }
   .width {
-    display: flex;
-    width: 348px;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
-    row-gap: 34px;
+      display: flex;
+      width: 276px;
+      flex-direction: column;
+      align-items: center;
+      /* padding: 14px; */
+      row-gap: 34px;
   }
   .width h1 {
     width: auto;
@@ -303,595 +377,60 @@ main {
     font-weight: 400;
     line-height: 24px;
   }
-  .hero .svg3 {
-    position: absolute;
-    top: -50px;
-    left: 30px;
-    width: 97px;
-    /* display: none; */
-  }
-  .hero .svg4 {
-    display: none;
-  }
-
-  .relative .svg5 {
-    display: none;
-  }
-  .left-svg {
-    display: none;
-  }
-
-  .left-svg1 {
-    display: none;
-  }
-
-  .left-svg2 {
-    display: none;
-  }
-
-  .right-svg3 {
-    display: none;
-  }
-  .right-svg {
-    display: none;
-  }
-  .right-svg1 {
-    display: none;
-  }
-
-  .left1 {
-    display: none;
-  }
-  .left2 {
-    display: none;
-  }
-  .left3 {
-    display: none;
-  }
-  .left-res {
-    display: none;
-  }
-  .left-res1 {
-    display: none;
-  }
-
-  .right-res {
-    display: none;
-  }
-  .right-res1 {
-    display: none;
-  }
-  .left1-res {
-    display: none;
-  }
-  .left2-res {
-    display: none;
-  }
-}
-
-@media (max-width: 425px) and (min-width: 320px) {
-
-  .heading2 {
-    min-width: 375px;
-    font-size: 42px;
-  }
-
-  .img-header {
-    height: 223px;
-  }
-  .cloud {
-    display: flex;
-    min-width: 375px;
-    max-width: 431px;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 48px;
-  }
-
-  .cloud ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-  }
-
-  .cloud ul li {
-    margin-bottom: 10px;
-  }
-  .speakers-responsive {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 48px;
-    min-width: 320px;
-  }
-  .speakers-responsive .row {
-    flex-direction: column-reverse;
-  }
-
-  /* .registration {
-    min-width: auto;
-    height: 594px;
-    padding-top: 50px;
-  } */
-
-  #form-control {
-    padding-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #form-control .col-md-6 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 180px;
-    height: 55px;
-    flex-shrink: 0;
-  }
-  #form-control .col-md-12 {
-    width: 384px;
-    height: 60px;
-    flex-shrink: 0;
-  }
-  #form-control .col-md-4 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 99px;
-    height: 48px;
-    flex-shrink: 0;
-  }
-  #form-control .col-md-8 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 260px;
-    height: 48px;
-    flex-shrink: 0;
-  }
-
-  #form-control .form-label {
-    margin-bottom: 5px;
-    margin-top: 7px;
-  }
-
-  #form-control .form-control {
-    align-items: center;
-  }
-
-  .speakers-responsive {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 48px;
-    min-width: 320px;
-  }
-  .speakers-responsive .row {
-    flex-direction: column-reverse;
-    width: 200px;
-  }
-
-  .con-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
-  }
+  .width ul{
+    width: 312px;
+  }         
   .speakers {
-    display: flex;
-    /* width: 400px;
-    height: auto; */
-    padding: 36px 0px 63px 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-  }
+    width: 300px;
+    height: 477px;
+    }
+    .box {
+      width: 300px;
+    }
 
  
+    .row-hero {
+    
+      align-self:center;
+    }
+    .speakers-one {
+      width: 266px;
+      height: 294px;
+    }
 
+    .speakers-two{
+      width: 218px;
+    }
+      .footer{
+        min-width:319px;
+      }
+     .heading2 {
+      min-width: 243px;
+      font-size: 37px;
+    }
+    .hero-content-sm-svg-5{
+      position: absolute;
+      top:2.5%;
+      left:0.5%;
+      z-index:1;
+    }
+    .left-sm-svg-1{
+      display: none;
 
-
-
-  .box {
-    display: flex;
-    padding: 8.58px;
-    justify-content: center;
-    align-items: center;
-    gap: 8.58px;
-    /* width: 400px; */
-  }
-
-  .width {
-    display: flex;
-    min-width: 300px;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 25px;
-    row-gap: 34px;
-  }
-  .width h1 {
-    width: auto;
-    height: auto;
-    text-align: center;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 38px;
-  }
-  .width li {
-    text-align: center;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-  }
-  .margin {
-    margin-left: 1px;
-  }
-
-  .roww {
-    width: 300px;
-    flex-direction: column-reverse;
-  }
-
-  .col6 {
-    width: 200px;
-    margin-right: 1px;
-  }
-
-
-
-
-}
-
-@media (max-width: 992px) and (min-width: 431px) {
-
-  .heading {
-    min-width: 395px;
-    text-align: center;
-  }
-
-  .heading2 {
-    min-width: 395px;
-    text-align: center;
-    font-size: 60px;
-  }
-
-  .img-header {
-    width: 100%;
-    height: auto;
-  }
-  .register {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-  /* .hero-content {
-    padding: 20px;
-  } */
-  .icons {
-    padding-bottom: 10px;
-  }
-
-  .cloud ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* align-items: center; */
-    padding-left: 30px;
-    gap: 15px;
-  }
-
-  .cloud ul li {
-    margin-bottom: 10px;
-    min-width: 395px;
-    justify-content: center;
-  }
-.registration {
-    width: 500px;
-   
-  /*  height: 594px;
-    padding-top: 50px;*/
+    }
+    .right-sm-svg-1{
+      display: none;
+    }
+    .left-sm-svg-3{
+      display: none;
+    }
+    .left-sm-svg-4 {
+      display: none;
+    }
+    .p-hero {
+      text-align: justify;
+    }
+    .row-footer {
+      min-width: 330px;
+    }
   } 
-
-  #form-control {
-    padding-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #form-control .col-md-6 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 180px;
-    height: 55px;
-    flex-shrink: 0;
-  }
-  #form-control .col-md-12 {
-    width: 384px;
-    height: 60px;
-    flex-shrink: 0;
-  }
-  #form-control .col-md-4 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 99px;
-    height: 48px;
-    flex-shrink: 0;
-  }
-  #form-control .col-md-8 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 260px;
-    height: 48px;
-    flex-shrink: 0;
-  }
-
-  #form-control .form-label {
-    margin-bottom: 5px;
-    margin-top: 7px;
-  }
-
-  #form-control .form-control {
-    align-items: center;
-  }
-
-  /* .speakers-responsive {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 48px;
-    min-width: 320px;
-  }
-  .speakers-responsive .row {
-    flex-direction: column-reverse;
-    width: 200px;
-  }
-
-  .con-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
-  } */
-  .speakers {
-    display: flex;
-    /* width: 400px;
-    height: auto; */
-    padding: 36px 0px 63px 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-  }
-
- 
-
-
-  .box {
-    display: flex;
-    padding: 8.58px;
-    justify-content: center;
-    align-items: center;
-    gap: 8.58px;
-    /* width: 400px; */
-  }
-
-  .width {
-    display: flex;
-    min-width: 300px;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 25px;
-    row-gap: 34px;
-  }
-  .width h1 {
-    width: auto;
-    height: auto;
-    text-align: center;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 38px;
-  }
-  .width li {
-    text-align: center;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-  }
-  .margin {
-    margin-left: 1px;
-  }
-
-  .roww {
-    width: 300px;
-    flex-direction: column-reverse;
-  }
-
-  .col6 {
-    width: 200px;
-    margin-right: 1px;
-  }
-
-
-
- 
-
-  .hi {
-    margin-left: 38px;
-  }
-}
-
-@media (max-width: 1440px) and (min-width: 1024px) {
-  .heading {
-    min-width: 395px;
-    text-align: center;
-  }
-
-  .heading2 {
-    min-width: 395px;
-    text-align: center;
-    font-size: 60px;
-  }
-
-  .btn1 {
-    width: auto;
-  }
-  .img-header {
-    height: 452px;
-  }
-  .register {
-    display: flex;
-  }
-
-
-  .cloud ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-left: 30px;
-    gap: 15px;
-  }
-
-  .cloud ul li {
-    margin-bottom: 10px;
-    min-width: 395px;
-    justify-content: center;
-  }
-
-  .registration {
-   /*  min-width: 432px;
-    height: 490px; */
-    /* padding-top: 30px; */
-  padding:50px;  } 
-
-  .img1 {
-    width: 323px;
-  }
-
-  #form-control {
-    padding-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #form-control .col-md-6 {
-    padding-left: 5px;
-    padding-right: 5px;
-    /* width: 180px;
-    height: 55px; */
-    flex-shrink: 0;
-  }
-  #form-control .col-md-12 {
-    width: 384px;
-    height: 60px;
-    flex-shrink: 0;
-  }
-  #form-control .col-md-4 {
-    padding-left: 5px;
-    padding-right: 5px;
-    /* width: 99px;
-    height: 48px; */
-    flex-shrink: 0;
-  }
-  #form-control .col-md-8 {
-    padding-left: 5px;
-    padding-right: 5px;
-    /* width: 260px;
-    height: 48px; */
-    flex-shrink: 0;
-  }
-
-  #form-control .form-label {
-    margin-bottom: 5px;
-    margin-top: 7px;
-  }
-
-  #form-control .form-control {
-    align-items: center;
-  }
-
-  .speakers-responsive {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 48px;
-    min-width: 320px;
-  }
-  .speakers-responsive .row {
-    flex-direction: column-reverse;
-    width: 200px;
-  }
-
-  .con-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
-  }
-  .speakers {
-    display: flex;
-    width: 400px;
-    height: auto;
-    padding: 36px 0px 63px 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-  }
-
-  .one {
-    max-width: 400px;
-    height: 434px;
-  }
-
-  .box {
-    display: flex;
-    padding: 8.58px;
-    justify-content: center;
-    align-items: center;
-    gap: 8.58px;
-    width: 400px;
-  }
-
-  .width {
-    display: flex;
-    min-width: 300px;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 25px;
-    row-gap: 34px;
-  }
-  .width h1 {
-    width: auto;
-    height: auto;
-    text-align: center;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 38px;
-  }
-  .width li {
-    text-align: center;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-  }
-  .margin {
-    margin-left: 1px;
-  }
-
-  .col6 {
-    width: 200px;
-    margin-right: 1px;
-  }
- 
-  
-
-}
